--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Cooking Time</string>
-    <string name="time_cooking_in_minutes">~ %1$d minutes</string>
+    <string name="time_cooking_in_minutes">Environ %1$d minutes</string>
 </resources>
